fix dark mode and add new assignment requirement

--- a/assets/css/form/form.css
+++ b/assets/css/form/form.css
@@ -1,7 +1,7 @@
 .contact-wrapper {
   display: flex;
   flex-direction: column;
-  padding: 0 5em;
+  /* padding: 0 5em; */
 }
 
 .title-form {
@@ -9,9 +9,9 @@
 }
 .contact-form {
   display: flex;
-  justify-content: center;
+  /* justify-content: space-evenly; */
 }
-input[type="text"], input[type="email"], textarea {
+input[type="text"], input[type="email"], textarea, input[type="date"] {
   width: 100%;
 }
 textarea {
