--- a/assets/css/slider/slider.css
+++ b/assets/css/slider/slider.css
@@ -12,6 +12,7 @@
 .element {
   width: 100%;
   height: 600px;
+  object-fit: cover;
 }
 
 .carousel {
